# src/dtos/owner.dto.js
@@ -1,4 +1,4 @@
 // 데이터 가공 : 이름과 지역명만 전달하고 싶음
-export const addOwnerResponseDTO = (owner, local) => {
-    return {"name": owner.name, "local": local};
+export const registOwnerResponseDTO = (data) => {
+    return {"name": data.name, "local_id": data.local_id};
 }
