# swagger/owner.swagger.yaml
@@ -25,10 +25,10 @@ paths:
               type: string
               description: 카테고리
               example: swagger
-            local:
-              type: string
+            local_id:
+              type: integer
               description: 지역명
-              example: swagger
+              example: 0000000000
       responses:
         '200':
           description: 가게 추가 성공!
@@ -52,7 +52,7 @@ paths:
                 example: {
                   "name": "swagger",
                   "category": "swagger",
-                  "local": "노원"
+                  "local_id": 0000000000
                 }
                 
         '400':
